# routes/index.js
@@ -3,22 +3,32 @@ const router = require('express').Router();
 const swaggerRoutes = require('./swagger');
 const studentRoutes = require('./students');
 const coursesRoutes = require('./courses');
+const passport = require('passport');
 
-router.get('/', (req, res) => { res.send('Hello World')});
+// Root route (shows login status)
+// NOTE: Passport automatically attaches user to req.user
+router.get('/', (req, res) => {
+    const name = req.user?.displayName || req.user?.username || 'User';
+    res.send(req.user ? `Logged in as ${name}` : "Logged Out");
+});
 
-router.use(
-    '/student',
-    studentRoutes
-);
+// Mount feature routes
+router.use('/students', studentRoutes);
+router.use('/courses', coursesRoutes);
+router.use('/api-docs', swaggerRoutes);
 
-router.use(
-    '/course',
-    coursesRoutes
-);
+// Route to start GitHub OAuth login
+router.get('/login', passport.authenticate('github'), (req, res) => {});
 
-router.use(
-    '/api-docs',
-    swaggerRoutes
-);
+// Logout route
+router.get('/logout', function(req, res, next)  {
+    req.logout(function(err) {
+        if (err) { return next(err); }
+
+        req.session.destroy(() => {
+            res.redirect('/');
+        });
+    });
+});
 
 module.exports = router;
