# swagger.json
@@ -11,7 +11,7 @@
     "https"
   ],
   "paths": {
-    "/student/": {
+    "/students/": {
       "get": {
         "tags": [
           "student"
@@ -80,11 +80,14 @@
         "responses": {
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
     },
-    "/student/{studentId}": {
+    "/students/{studentId}": {
       "get": {
         "tags": [
           "student"
@@ -167,6 +170,9 @@
         "responses": {
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       },
@@ -187,11 +193,14 @@
         "responses": {
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
     },
-    "/course/": {
+    "/courses/": {
       "get": {
         "tags": [
           "course"
@@ -242,11 +251,14 @@
         "responses": {
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
     },
-    "/course/{courseId}": {
+    "/courses/{courseId}": {
       "get": {
         "tags": [
           "course"
@@ -311,6 +323,9 @@
         "responses": {
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       },
@@ -331,6 +346,9 @@
         "responses": {
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
